[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.sdist]
exclude = [".idea", "tmp", "dist", ".tox", ".pytest_cache"]

[tool.flit.metadata]
module = "artkit"
author = "Boston Consulting Group (BCG)"
home-page = "https://github.com/BCG-X-Official/artkit"
description-file = "pypi_description.rst"
dist-name = "artkit"
license = "Apache Software License v2.0"

requires = [
    "matplotlib        ~=3.6",
    "pandas            ~=2.1",
    "gamma-pytools     ~=3.0",
    "fluxus            ~=1.0",
    "typing_inspect    ~=0.7",
]

requires-python = ">=3.10,<4a"

[tool.flit.metadata.requires-extra]
openai = [
    "openai                   ~= 1.34"
]

groq = [
    "groq                     ~= 0.9",
]

anthropic = [
    "anthropic                ~= 0.28"
]

google-generativeai = [
    "google-generativeai      ~= 0.6"
]

huggingface = [
    "aiohttp                  ~= 3.9",
    "torch                    ~= 2.3",
    "transformers             ~= 4.41",
]

dev = [
    "artkit[openai, groq, anthropic, google-generativeai, huggingface]",
    # We use dotenv in the tutorial notebooks
    "python-dotenv            ~= 1.0",

    # Sphinx documentation build
    "nbsphinx                 ~= 0.9",
    "sphinx                   ~= 7.2",
    "sphinx-autodoc-typehints ~= 1.25",
    "pydata-sphinx-theme      ~= 0.15.1",
    "packaging                ~= 24.1",

    # Notebooks
    "ipywidgets               ~= 8.1",
    "jupyterlab               ~= 4.2",
    "notebook                 ~= 7.2",

    # DevOps
    "pytest                   ~= 8.2",
    "pytest-asyncio           ~= 0.23",
    "pytest-cov               ~= 5.0",
    "pre-commit               ~= 3.7",
]

testing = [
    "pytest                   ~= 8.2",
    "pytest-cov               ~= 5.0",
    "pytest-asyncio           ~= 0.23",
]

[tool.flit.metadata.urls]
Documentation = "https://bcg-x-official.github.io/artkit/"
Repository = "https://github.com/BCG-X-Official/artkit"

[build]
# comma-separated list of packages to be built from source in pip min builds
no-binary.min = []

[build.matrix.min]
matplotlib          = "~=3.6.3"
pandas              = "~=2.1"
python              = ">=3.10.14,<3.11a"
gamma-pytools       = "~=3.0.0"
fluxus              = "~=1.0.0"
typing_inspect      = "~=0.7.1"
openai              = "~=1.34.0"
anthropic           = "~=0.28.0"
groq                = "~=0.9.0"
google-generativeai = "~=0.6.0"
aiohttp             = "~=3.9.0"
transformers        = "~=4.41.0"
torch               = "~=2.3.0"

[build.matrix.max]
matplotlib          = "~=3.8"
pandas              = "~=2.2"
python              = ">=3.12,<4a"
gamma-pytools       = "~=3.0"
fluxus              = "~=1.0"
typing_inspect      = "~=0.9"
openai              = "~=1.34"
anthropic           = "~=0.28"
groq                = "~=0.9"
google-generativeai = "~=0.6"
aiohttp             = "~=3.9"
transformers        = "~=4.41"
torch               = "~=2.3"

[tool.black]
required-version = '24.4.2'
line-length = 88
target_version = ['py310']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | data
    | docs
    | notebooks
    | sphinx
  )/
)
'''

[tool.mypy]
show_error_codes = true
strict = true
untyped_calls_exclude = [
    'IPython',
]

[[tool.mypy.overrides]]
module = [
    "anthropic.*",
    "google.*",
    "groq.*",
    "huggingface_hub.*",
    "IPython.*",
    "torch.*",
    "transformers.*",
    "typing_inspect.*",
]
ignore_missing_imports = true